# llm-natsuki-bot

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  config.template.jsonnet  config.template.toml  config.template.yaml  rate-limits.template.jsonnet  wrangler.toml
.github/workflows/: build-docker-image.yml
assets/: schema-sqlite.sql
config/: .gitignore  user-roles.template.jsonnet
config/templates/: config.template.jsonnet  rate-limits.template.jsonnet  user-roles.template.jsonnet
docker/: Dockerfile.lnb-admin-api  Dockerfile.lnb-math-renderer  Dockerfile.lnb-server
lnb-admin-api/: Cargo.toml
lnb-admin-api/src/: api.rs  application.rs  config.rs  jwt_auth.rs  main.rs
lnb-admin-api/src/api/: auxiliary.rs  conversations.rs  error.rs  reminders.rs
lnb-admin-api/src/application/: conversation_db.rs  error.rs  reminder_db.rs
lnb-admin-api/src/jwt_auth/: error.rs  layer.rs  verifier.rs
lnb-common/: Cargo.toml
lnb-common/src/: config.rs  debug.rs  extension.rs  lib.rs  math_renderer.rs  persistence.rs  rate_limits.rs  text_provider.rs  time_provider.rs  user_roles.rs
lnb-common/src/config/: admin_api.rs  assistant.rs  client.rs  llm.rs  reminder.rs  storage.rs  tools.rs
lnb-common/src/persistence/: conversation_sqlite.rs  error.rs  reminder_redis.rs
lnb-core/: Cargo.toml
lnb-core/src/: config.rs  context.rs  error.rs  interface.rs  lib.rs  model.rs
lnb-core/src/interface/: function.rs  interception.rs  llm.rs  reminder.rs  server.rs  storage.rs  text.rs  time.rs
lnb-core/src/interface/function/: complex.rs  simple.rs
lnb-core/src/model/: conversation.rs  message.rs  schema.rs  user_role.rs
lnb-daily-private/: Cargo.toml
lnb-daily-private/src/: datetime.rs  day_routine.rs  lib.rs  logical_date.rs  masturbation.rs  menstruation.rs  schedule.rs  temperature.rs  underwear.rs
lnb-discord-client/: Cargo.toml
lnb-discord-client/src/: inner.rs  lib.rs
lnb-job-queue/: Cargo.toml
lnb-job-queue/src/: error.rs  worker.rs
lnb-mastodon-client/: Cargo.toml
lnb-mastodon-client/src/: inner.rs  lib.rs  text.rs
lnb-math-renderer/: package-lock.json  package.json  tsconfig.json
lnb-math-renderer/src/: index.ts
lnb-math-renderer/src/api/: endpoints.ts  schema.ts
lnb-math-renderer/src/rendering/: latex.ts
lnb-math-renderer/src/type/: mathjax.d.ts
lnb-rate-limiter/: Cargo.toml
lnb-rate-limiter/src/: bucket.rs  lib.rs  rate.rs
lnb-server/: Cargo.toml  build.rs
lnb-server/src/: bang_command.rs  cli.rs  config.rs  function.rs  interception.rs  llm.rs  main.rs  natsuki.rs  reminder.rs  shiyu.rs  storage.rs
lnb-server/src/bang_command/: interception.rs  simple.rs
lnb-server/src/function/: daily_private.rs  exchange_rate.rs  get_illust_url.rs  image_generator.rs  local_info.rs  math_renderer.rs  reminder.rs  self_info.rs
lnb-server/src/interception/: bang_command.rs
lnb-server/src/llm/: openai.rs
lnb-server/src/llm/openai/: chat_completion.rs  responses.rs
lnb-server/src/natsuki/: context.rs  function_store.rs  inner.rs  llm_cache.rs
lnb-server/src/natsuki/llm/: openai.rs
lnb-server/src/natsuki/llm/openai/: chat_completion.rs  responses.rs
lnb-server/src/natsuki/storage/: sqlite.rs
lnb-server/src/reminder/: function.rs
lnb-server/src/shiyu/: function.rs  inner.rs  worker.rs
lnb-server/src/storage/: memory.rs  sqlite.rs
proto/: lnb_service.proto
xtask/: Cargo.toml
xtask/src/: main.rs  task.rs  util.rs
