[workspace]
resolver = "2"
members = [
  "lnb-core",
  "lnb-common",
  "lnb-rate-limiter",
  "lnb-daily-private",
  "lnb-server",
  "lnb-admin-api",
  "lnb-mastodon-client",
  "lnb-discord-client",
  "xtask",
]

[workspace.package]
version = "0.15.0"
description = "LLM-based chatbot with various functions"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2024"

[workspace.dependencies]
lnb-core = { path = "./lnb-core" }
lnb-common = { path = "./lnb-common" }
lnb-rate-limiter = { path = "./lnb-rate-limiter" }
lnb-daily-private = { path = "./lnb-daily-private" }
lnb-mastodon-client = { path = "./lnb-mastodon-client" }
lnb-discord-client = { path = "./lnb-discord-client" }

anyhow = "1.0.97"
async-openai = "0.28.0"
base64 = "0.22.1"
bimap = "0.6.3"
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
html2md = "0.2.15"
infer = "0.19.0"
markdown = "1.0.0-alpha.23"
pin-project = "1.1.10"
rand = "0.9.0"
rand_distr = "0.5.1"
redis = { version = "0.29.5", features = ["tokio-comp"] }
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.140"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio",
  "sqlite",
  "uuid",
  "time",
] }
tempfile = "3.19.1"
thiserror = "2.0.12"
time = { version = "0.3.41", features = [
  "formatting",
  "parsing",
  "local-offset",
  "macros",
  "serde",
] }
tokio = { version = "1.44.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-tungstenite = "0.26.2"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["serde", "v7"] }

[profile.release]
lto = true
opt-level = 3
strip = true
