[workspace]
resolver = "2"
members = [
  "lnb-core",
  "lnb-common",
  "lnb-rate-limiter",
  "lnb-daily-private",
  "lnb-server",
  "lnb-admin-api",
  "lnb-mastodon-client",
  "lnb-discord-client",
  "xtask",
]

[workspace.package]
version = "0.17.0"
description = "LLM-based chatbot with various functions"
authors = ["kb10uy <kb10uy@kb10uy.org>"]
edition = "2024"

[workspace.dependencies]
lnb-core = { path = "./lnb-core" }
lnb-common = { path = "./lnb-common" }
lnb-rate-limiter = { path = "./lnb-rate-limiter" }
lnb-daily-private = { path = "./lnb-daily-private" }
lnb-mastodon-client = { path = "./lnb-mastodon-client" }
lnb-discord-client = { path = "./lnb-discord-client" }

anyhow = "1.0.102"
async-openai = { version = "0.33.0", features = ["chat-completion", "responses", "image"] }
base64 = "0.22.1"
bimap = "0.6.3"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
futures = "0.3.32"
html2md = "0.2.15"
infer = "0.19.0"
markdown = "1.0.0"
pin-project = "1.1.11"
rand = "0.10.0"
rand_distr = "0.6.0"
redis = { version = "1.0.4", features = ["tokio-comp"] }
regex = "1.12.3"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "sqlite",
  "uuid",
  "time",
] }
tempfile = "3.26.0"
thiserror = "2.0.18"
time = { version = "0.3.47", features = [
  "formatting",
  "parsing",
  "local-offset",
  "macros",
  "serde",
] }
tokio = { version = "1.50.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
upon = "0.10.0"
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.21.0", features = ["serde", "v7"] }

[profile.release]
lto = true
opt-level = 3
strip = true
