[package]
name = "lnb-admin-api"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lnb-core = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

axum = "0.8.3"
jsonwebtoken = "9.3.1"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
