[package]
name = "lnb-common"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lnb-core = { workspace = true }
lnb-rate-limiter = { workspace = true }
lnb-daily-private = { workspace = true }

base64 = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
