[package]
name = "lnb-discord-client"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lnb-core = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
infer = { workspace = true }
markdown = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

serenity = "0.12.4"
