[package]
name = "lnb-job-queue"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
futures = { workspace = true }
redis = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
