[package]
name = "lnb-server"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lnb-core = { workspace = true }
lnb-mastodon-client = { workspace = true }
lnb-discord-client = { workspace = true }

anyhow = { workspace = true }
async-openai = { workspace = true }
bimap = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[target.x86_64-pc-windows-msvc.dependencies]
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "sqlite",
  "uuid",
  "time",
] }


[target.x86_64-unknown-linux-gnu.dependencies]
sqlx = { workspace = true, features = ["runtime-tokio", "uuid", "time"] }


[build-dependencies]
time = { workspace = true }
lnb-core = { workspace = true }
