[package]
name = "lnb-server"
version.workspace = true
description.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lnb-core = { workspace = true }
lnb-daily-private = { workspace = true }
lnb-mastodon-client = { workspace = true }
lnb-discord-client = { workspace = true }

anyhow = { workspace = true }
async-openai = { workspace = true }
base64 = { workspace = true }
bimap = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
rand = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
time = { workspace = true }
lnb-core = { workspace = true }
